FEAT: Add example app -- todo list
